--- a/terraform-exemplo2/cloudbuildterraform.yaml
+++ b/terraform-exemplo2/cloudbuildterraform.yaml
@@ -1,7 +1,7 @@
 steps:
 
 - id: 'tf apply'
-  name: 'hashicorp/terraform:1.0.0'
+  name: 'cloudbuildterraform:1.0.0'
   entrypoint: 'sh'
   args: 
   - '-c'
